ridematch-chart/templates/postgres-exporter.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-exporter
  namespace: ridematch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres-exporter

  template:
    metadata:
      labels:
        app: postgres-exporter

    spec:
      containers:
      - name: postgres-exporter
        image: prometheuscommunity/postgres-exporter:latest

        ports:
        - containerPort: 9187
