ridematch-chart/templates/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-allow-backend
  namespace: ridematch

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ridematch-backend

      ports:
        - protocol: TCP
          port: 5432
